Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-18200

MariaBackup full backup failed with InnoDB: Failing assertion: success in storage/innobase/fil/fil0fil.cc line 657

    XMLWordPrintable

Details

    Description

      10.4 301bd62b253

      mariabackup: Generating a list of tablespaces
      2019-01-10  3:51:49 0 [Warning] InnoDB: Allocated tablespace ID 3 for mysql/transaction_registry, old maximum was 0
      2019-01-10  3:51:49 0 [ERROR] InnoDB: Operating system error number 2 in a file operation.
      2019-01-10  3:51:49 0 [ERROR] InnoDB: The error means the system cannot find the path specified.
      2019-01-10  3:51:49 0 [ERROR] InnoDB: If you are installing InnoDB, remember that you must create directories yourself, InnoDB does not create them.
      2019-01-10  3:51:49 0 [ERROR] InnoDB: File ./test/#sql-6041_11.ibd: 'open' returned OS error 71.
      2019-01-10 03:51:49 0x7fa4fbbdb740  InnoDB: Assertion failure in file /home/travis/src/storage/innobase/fil/fil0fil.cc line 657
      InnoDB: Failing assertion: success
      InnoDB: We intentionally generate a memory trap.
       
      /home/travis/server/bin/mariabackup(+0xfc703a)[0x55e5bbb9003a]
      /home/travis/server/bin/mariabackup(+0xd38cdf)[0x55e5bb901cdf]
      ut/ut0mem.cc:42(ut_strlcpy(char*, char const*, unsigned long))[0x55e5bb905105]
      fil/fil0fil.cc:658(fil_node_open_file(fil_node_t*))[0x55e5bb1e3d2e]
      fil/fil0fil.cc:1647(fil_space_t::open())[0x55e5bb1e4126]
      mariabackup/xtrabackup.cc:3136(xb_load_single_table_tablespace(char const*, char const*, bool))[0x55e5bb1e46c1]
      mariabackup/xtrabackup.cc:3251(enumerate_ibd_files(void (*)(char const*, char const*, bool)))[0x55e5bb1e6509]
      mariabackup/xtrabackup.cc:3421(xb_load_tablespaces())[0x55e5bb1eda33]
      mariabackup/xtrabackup.cc:4250(xtrabackup_backup_func())[0x55e5bb1ed283]
      /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf0)[0x7fa4f9830830]
      /home/travis/server/bin/mariabackup(_start+0x29)[0x55e5bb1dcef9]
      

      Logs are attached.
      Not reproducible right away.

      Attachments

        1. mbackup_backup_0.log
          5 kB
        2. MDEV-18200.test
          0.6 kB
        3. mysql.err
          36 kB
        4. mysql.log
          4.55 MB
        5. simp_MDEV-18200.yy
          0.4 kB
        6. trial.log
          46 kB

        Issue Links

          Activity

            People

              danblack Daniel Black
              elenst Elena Stepanova
              Votes:
              1 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2d 7.75h
                  2d 7.75h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.